# actix_auth_api

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  error.rs  main.rs  utils.rs
src/api/: user.rs
src/db/: mod.rs  users.rs  users_trait.rs
src/model/: auth.rs  user.rs
src/users/: init.rs
