[package]
name = "actix_auth_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "^1", features = ["derive"] }
serde_json = "1.0"
derive_more = "0.99.17"
surrealdb = "1.0.0"
validator = { version = "0.16.1", features = ["derive"] }
json = "0.12.4"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
